added simple email implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 security.user.password=user
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=springwebapplication@gmail.com
+spring.mail.password=nowehaslo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
